# forge-position

./: README.md  pyproject.toml
docs/: colab.md  compare_methods_results.json  equations.md  failure_modes.md  length_extrapolation_results.json  research_notes.md
examples/: 01_sinusoidal_visualization.py  02_rope_geometry.py  03_rope_attention_scores.py  04_alibi_bias.py  05_kv_cache_positions.py  06_length_extrapolation.py  07_compare_methods.py  08_rope_intuition_figures.py
notebooks/: 01_sinusoidal_vs_rope.ipynb  02_rope_geometry.ipynb  03_alibi_bias_visualization.ipynb  04_kv_cache_position_bugs.ipynb  05_length_extrapolation_lab.ipynb
src/forge_position/: __init__.py  alibi.py  attention.py  kv_cache.py  learned.py  metrics.py  nope.py  rope.py  rope_scaling.py  sinusoidal.py  tiny_transformer.py  visualization.py
tests/: test_alibi_bias.py  test_kv_cache_positions.py  test_position_scaling.py  test_rope_relative_property.py  test_rope_shapes.py  test_sinusoidal.py  test_tiny_transformer.py
